--- a/starter-code/new.html
+++ b/starter-code/new.html
@@ -88,7 +88,8 @@
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
     <script>
-      articleView.initNewArticlePage();
+      // articleView.initNewArticlePage();
+      Article.fetchAll();
     </script>
   </body>
 </html>
